[package]
name = "im"
version = "11.0.1"
authors = ["Bodil Stokke <bodil@bodil.org>"]
license = "MPL-2.0+"
description = "Assorted immutable collection datatypes"
repository = "https://github.com/bodil/im-rs"
documentation = "http://immutable.rs/"
homepage = "http://immutable.rs/"
readme = "README.md"
categories = ["data-structures"]
keywords = ["immutable", "persistent"]

[badges]
travis-ci = { repository = "bodil/im-rs" }

[dependencies]
quickcheck = { version = "0.6", optional = true }
proptest = { version = "0.8", optional = true }
serde = { version = "1.0", optional = true }
im-rc = "11.0.1"
im-arc = "11.0.1"
